restyled css/layout

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Barlow+Condensed:wght@500&family=Oleo+Script+Swash+Caps:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
-  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@700&display=swap" rel="stylesheet">
     <title>Roadmap for Reopening Nashville</title>
 </head>
 <body>
-  <h1>Roadmap for Reopening Nashville</h1>
 
-  <ul id="main_nav"></ul>
+  <nav class="navigation">
+    <h1>Road Map for Re-Opening Nashville</h1>
+    <ul id="mainmenu"></ul>
+  </nav>
 
   <div id="content">
     <img src="shop.png" alt="" srcset="">
